# cpp-skills

./: .gitignore  LICENSE  README.md  concepts.md  rp2040_promicro.md
concepts/: 00_index.md  01_oop.md  02_build_env.md  03_debuging.md  04_const.md  08_pragmas.md  09_double_address_operator.md  10_oop.md  11_memory.md  12_function_call.md  13_auto.md  14_decltype.md  15_nullptr.md  15_pointers.md  20_concurrency.md  22_unique_ptr.md  30_iterator.md  31_sort.md  32_lambda.md  50_singleton.md  51_fold_expresion.md  51_fold_expression.md  52_inline_variable.md  53_digit_separator.md  54_thread.md  60_string.md  61_pipe.md
esp32/ttgo-tdisplay/: readme.md
functions/f1/: .clangd  CMakeLists.txt  main.cpp
picolino/: .env  CMakeLists.txt  blink.c  readme.md
pointers/: pointer1.cpp
pointers/p1/: main.cpp
pointers/p2/: main.cpp
pointers/p3/: main.cpp
pointers/p4/: main.cpp
